# search_engine

./: CMakeLists.txt
inc/: Converter.h  InvertedIndex.h  SearchServer.h  Structures.h
resources/: MB.txt  answers.json  astonMartin.txt  config.json  file001.txt  file002.txt  file003.txt  file004.txt  requests.json
src/: CMakeLists.txt  Converter.cpp  InvertedIndex.cpp  SearchServer.cpp  search_engine_v3.cpp
